# project-sigmatrader

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: coin-selection.ipynb  quick-correlation-check.ipynb
runs/: WeightedTradeTermReward2-a2c.csv  WeightedTradeTermReward2-ppo.csv
runs/testresults/: a2c-ALGO-baseline-reward_stats_describe.csv  a2c-BTC-baseline-reward_stats_describe.csv  a2c-TRX-baseline-reward_stats_describe.csv  blindmonkey_ALGOUSDT_stats_describe.csv  blindmonkey_BTCUSDT_stats_describe.csv  blindmonkey_TRXUSDT_stats_describe.csv  ppo-ALGO-baseline-reward_stats_describe.csv  ppo-ALGO-weighted-mediumterm-3-tuned_stats_describe.csv  ppo-ALGO-weighted-mediumterm-3_stats_describe.csv  ppo-BTC-baseline-reward_stats_describe.csv  ppo-BTC-weighted-mediumterm-3-tuned_stats_describe.csv  ppo-BTC-weighted-mediumterm-3_stats_describe.csv  ppo-TRX-baseline-reward_stats_describe.csv  ppo-TRX-weighted-mediumterm-3-tuned_stats_describe.csv  ppo-TRX-weighted-mediumterm-3_stats_describe.csv
scripts/: blindmonkey.py  evaluate.py  train.py  tune.py  utils.py
scripts/config/: evaluate.yaml  train.yaml
scripts/config/algo/: a2c.yaml  dqn.yaml  ppo-mediumterm-1.yaml  ppo-weightedmediumterm.yaml  ppo.yaml  rppo.yaml
scripts/config/reward_wrapper/: time_adj.yaml  weighted_trade_term.yaml
scripts/config/splitter/: splitter.yaml
src/sigmatrader/: dataloader.py  featurebuilder.py  splitter.py
src/sigmatrader/data/: apikey.py  coindata.py  tadata.py
src/sigmatrader/marketenv/: __init__.py  (+3 more)
tests/: test_marketenv.py  test_splitter.py
